Adicionado packages pelo bower

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
     <head>
         <meta charset="utf-8">
         <title>Angular</title>
-        <link rel="stylesheet" href="css/bootstrap.css">
-        <script src="lib/angular.js"></script>
-        <script src="lib/angular-route.js"></script>
+        <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+        <script src="bower_components/angular/angular.js"></script>
+        <script src="bower_components/angular-route/angular-route.js"></script>
         <script src="js/app.module.js"></script>
         <script src="js/app.config.js"></script>
         <script src="modulos/basico/basico.module.js"></script>
