Destaque no item selecionado das listas
Ajustes nos arquivos do projeto e adicionado diretiva que gerencia
class='active' nos itens de lista

--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
         <meta charset="utf-8">
         <title>Angular</title>
         <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+        <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.css">
         <script src="bower_components/angular/angular.js"></script>
         <script src="bower_components/angular-route/angular-route.js"></script>
+        <script src="bower_components/jquery/dist/jquery.js"></script>
+        <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
         <script src="js/app.module.js"></script>
-        <script src="js/app.config.js"></script>
+        <script src="js/app.directive.js"></script>
+        <script src="js/app.routes.js"></script>
         <script src="modulos/basico/basico.module.js"></script>
         <script src="modulos/basico/basico.controller.js"></script>
         <script src="modulos/filtro/filtro.module.js"></script>
@@ -17,7 +21,7 @@
             <div ng-include="'partials/header.html'"></div>
         </div>
         <div class="container-fluid">
-            <div class="col-md-2 text-center">
+            <div class="col-md-2">
                 <div ng-include="'partials/left-menu.html'"></div>
             </div>
             <div class="col-md-10">
