--- a/modulos/formulario/formulario.html
+++ b/modulos/formulario/formulario.html
@@ -1,1 +1,44 @@
-<h3>Formulário</h3>
+<form novalidate name="form">
+  <h3>Formulário</h3>
+  <div class="row">
+    <div class="col-md-6">
+      <label>Nome:</label>
+      <input type="text" class="form-control" name="nome" maxlength="50"
+      ng-model="formCtrl.Nome" ng-required="true">
+      <div ng-messages="form.nome.$error" class="text-danger">
+        <spam ng-message="required">Campo obrigatório</spam>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <label>Sobrenome:</label>
+      <input type="text" class="form-control" maxlength="50"
+      ng-model="formCtrl.Sobrenome">
+    </div>
+  </div>
+  <br>
+  <div class="row">
+    <div class="col-md-3">
+      <label>Idade:</label>
+      <input type="number" min="1" max="99" class="form-control"
+      ng-model="formCtrl.Idade" name="idade">
+      <div ng-messages="form.idade.$error" class="text-danger">
+        <spam ng-message="number">Número informado inválido</spam>
+        <spam ng-message="min">Valor mínimo permitido: 1</spam>
+        <spam ng-message="max">Valor máximo permitido: 99</spam>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <label>Sexo:</label>
+      <select class="form-control" ng-model="formCtrl.Sexo">
+        <option value="M">Feminino</option>
+        <option value="F">Masculinho</option>
+        <option value="O">Outro</option>
+      <select>
+    </div>
+  </div>
+  <br>
+  <button type="submit" class="btn btn-default">Salvar</button>
+  <br><br>
+  <label>Resultado objeto:</label>
+  <pre>{{formCtrl|json}}</pre>
+</form>
