--- a/modulos/formulario/formulario.html
+++ b/modulos/formulario/formulario.html
@@ -1,8 +1,8 @@
 <form novalidate name="form">
   <h3>Formulário</h3>
   <div class="row">
-    <div class="col-md-6">
-      <label>Nome:</label>
+    <div class="col-md-6" ng-class="{ 'has-error': form.nome.$invalid }">
+      <label class="control-label">Nome:</label>
       <input type="text" class="form-control" name="nome" maxlength="50"
       ng-model="formCtrl.Nome" ng-required="true">
       <div ng-messages="form.nome.$error" class="text-danger">
@@ -10,15 +10,17 @@
       </div>
     </div>
     <div class="col-md-6">
-      <label>Sobrenome:</label>
+      <label class="control-label">Sobrenome:</label>
       <input type="text" class="form-control" maxlength="50"
       ng-model="formCtrl.Sobrenome">
     </div>
   </div>
+
   <br>
+
   <div class="row">
-    <div class="col-md-3">
-      <label>Idade:</label>
+    <div class="col-md-2" ng-class="{ 'has-error': form.idade.$invalid }">
+      <label class="control-label">Idade:</label>
       <input type="number" min="1" max="99" class="form-control"
       ng-model="formCtrl.Idade" name="idade">
       <div ng-messages="form.idade.$error" class="text-danger">
@@ -27,18 +29,53 @@
         <spam ng-message="max">Valor máximo permitido: 99</spam>
       </div>
     </div>
-    <div class="col-md-3">
-      <label>Sexo:</label>
-      <select class="form-control" ng-model="formCtrl.Sexo">
-        <option value="M">Feminino</option>
-        <option value="F">Masculinho</option>
-        <option value="O">Outro</option>
+    <div class="col-md-2">
+      <label class="control-label">Sexo:</label>
+      <select class="form-control" ng-change="formCtrl.onChangeSexo()" ng-model="formCtrl.Sexo">
+        <option value="F">Feminino</option>
+        <option value="M">Masculino</option>
       <select>
     </div>
+    <div class="col-md-8">
+      <label class="control-label">Estado Civil:</label>
+      <div class="radio">
+          <label class="col-md-2">
+            <input type="radio" name="radioStatus" value="Solteiro"
+            ng-model="formCtrl.estadoCivil"> {{ formCtrl.enumEstadoCivil.Solteiro }}
+          </label>
+          <label class="col-md-2">
+            <input type="radio" name="radioStatus" value="Casado"
+            ng-model="formCtrl.estadoCivil"> {{ formCtrl.enumEstadoCivil.Casado }}
+          </label>
+          <label class="col-md-2">
+            <input type="radio" name="radioStatus" value="Viuvo"
+            ng-model="formCtrl.estadoCivil"> {{ formCtrl.enumEstadoCivil.Viuvo }}
+          </label>
+          <label class="col-md-2">
+            <input type="radio" name="radioStatus" value="Separado"
+            ng-model="formCtrl.estadoCivil"> {{ formCtrl.enumEstadoCivil.Separado }}
+          </label>
+          <label class="col-md-2">
+            <input type="radio" name="radioStatus" value="Divorciado"
+            ng-model="formCtrl.estadoCivil"> {{ formCtrl.enumEstadoCivil.Divorciado }}
+          </label>
+        </div>
+    </div>
   </div>
+
+  <div class="row">
+
+  </div>
+
   <br>
-  <button type="submit" class="btn btn-default">Salvar</button>
+
+  <button type="submit" class="btn btn-default" ng-disabled="form.$invalid">
+    Salvar
+  </button>
+
   <br><br>
+
   <label>Resultado objeto:</label>
   <pre>{{formCtrl|json}}</pre>
+  <pre>{{form.$error|json}}</pre>
 </form>
