Ajustes em formulário e adicionado conteúdo em filtros

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <script src="modulos/formulario/formulario.controller.js"></script>
         <script src="modulos/filtro/filtro.module.js"></script>
         <script src="modulos/filtro/filtro.controller.js"></script>
+        <script src="modulos/filtro/custom.filter.js"></script>
     </head>
     <body ng-app="app" class="container">
         <div>
