--- a/modulos/filtro/filtro.html
+++ b/modulos/filtro/filtro.html
@@ -1,1 +1,32 @@
 <h3>Filtro</h3>
+<p>filter: param</p>
+<div class="row">
+  <div class="col col-md-4">
+    <div class="input-group">
+      <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
+      <input type="search" class="form-control" ng-model="filtroPessoa">
+    </div>
+  </div>
+</div>
+<br>
+<table class="table table-striped table-bordered table-hover">
+  <thead>
+    <tr>
+      <th>#</th>
+      <th>Nome</th>
+      <th>Idade</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr ng-repeat="pessoa in filtroCtrl.listaPessoas | filter: filtroPessoa">
+      <td>{{$index}}</td>
+      <td>{{pessoa.Nome}}</td>
+      <td>{{pessoa.Idade}}</td>
+    </tr>
+  </tbody>
+</table>
+
+<spam>filtro custom: {{ 'teste' | custom1 }}</spam>
+
+<p>json</p>
+<pre>{{filtroCtrl.listaPessoas|json}}</pre>
