--- a/modulos/formulario/formulario.html
+++ b/modulos/formulario/formulario.html
@@ -1,4 +1,4 @@
-<form novalidate name="form">
+<form novalidate name="form" ng-submit="formCtrl.formSubmit()">
   <h3>Formulário</h3>
   <div class="row">
     <div class="col-md-6" ng-class="{ 'has-error': form.nome.$invalid }">
@@ -69,9 +69,7 @@
 
   <br>
 
-  <button type="submit" class="btn btn-default" ng-disabled="form.$invalid">
-    Salvar
-  </button>
+  <input type="submit" class="btn btn-default" ng-disabled="form.$invalid" value="Salvar">
 
   <br><br>
 
