Adicionado o módulo diretiva

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <script src="js/app.routes.js"></script>
         <script src="modulos/basico/basico.module.js"></script>
         <script src="modulos/basico/basico.controller.js"></script>
+        <script src="modulos/diretiva/diretiva.module.js"></script>
+        <script src="modulos/diretiva/diretiva.controller.js"></script>
         <script src="modulos/formulario/formulario.module.js"></script>
         <script src="modulos/formulario/formulario.controller.js"></script>
         <script src="modulos/filtro/filtro.module.js"></script>
