--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
     <head>
         <meta charset="utf-8">
         <title>Angular</title>
-        <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
-        <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.css">
-        <script src="bower_components/angular/angular.js"></script>
-        <script src="bower_components/angular-route/angular-route.js"></script>
-        <script src="bower_components/angular-messages/angular-messages.js"></script>
-        <script src="bower_components/jquery/dist/jquery.js"></script>
-        <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+        <link rel="stylesheet" href="lib/css/bootstrap.min.css">
+        <link rel="stylesheet" href="lib/css/bootstrap-theme.min.css">
+        <script src="lib/js/angular.min.js"></script>
+        <script src="lib/js/angular-route.min.js"></script>
+        <script src="lib/js/angular-messages.min.js"></script>
+        <script src="lib/js/jquery.min.js"></script>
+        <script src="lib/js/bootstrap.min.js"></script>
         <script src="js/app.module.js"></script>
         <script src="js/diretivas/ul.directive.js"></script>
         <script src="js/app.routes.js"></script>
