--- a/index.html
+++ b/index.html
@@ -2,13 +2,9 @@
     <head>
         <meta charset="utf-8">
         <title>Angular</title>
-        <link rel="stylesheet" href="lib/css/bootstrap.min.css">
-        <link rel="stylesheet" href="lib/css/bootstrap-theme.min.css">
-        <script src="lib/js/angular.min.js"></script>
-        <script src="lib/js/angular-route.min.js"></script>
-        <script src="lib/js/angular-messages.min.js"></script>
-        <script src="lib/js/jquery.min.js"></script>
-        <script src="lib/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+        <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
         <script src="js/app.module.js"></script>
         <script src="js/diretivas/ul.directive.js"></script>
         <script src="js/app.routes.js"></script>
